# lpg-gui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  a5 doc.lnk  todo.txt
cmake/: Findlunasvg.cmake
examples/: CMakeLists.txt
examples/resources/data/dziub/: default.ini  message.txt
examples/resources/data/gui/: default.ini
examples/resources/data/locale/: en_US.ini  pl_PL.ini  ru_RU.ini
examples/src/: example1.cpp
include/lpg/a5xx/: Bitmap.hpp  Config.hpp  EventQueue.hpp  Font.hpp  Init.hpp  Log.hpp  RAII.hpp  Resource.hpp  ResourceFactory.hpp  Sample.hpp  a5xx.hpp
include/lpg/gui/: Button.hpp  Checkbox.hpp  Desktop.hpp  DropdownList.hpp  Environment.hpp  Image.hpp  Math.hpp  Mouse.hpp  ProgressBar.hpp  Slider.hpp  Text.hpp  TextBox.hpp  TitleBar.hpp  Window.hpp  gui.hpp
include/lpg/resmgr/: DefaultLoaders.hpp  ManagedResource.hpp  ResourceLoader.hpp  ResourceManager.hpp  SVGLoader.hpp
include/lpg/util/: IntegerMap.hpp  Log.hpp  ResourceManager.hpp  StrManip.hpp  VectorImage.hpp
src/lpg/a5xx/: Bitmap.cpp  Config.cpp  EventQueue.cpp  Font.cpp  Init.cpp  Log.cpp  Resource.cpp  ResourceFactory.cpp  Sample.cpp
src/lpg/gui/: Button.cpp  Checkbox.cpp  Desktop.cpp  DropdownList.cpp  Image.cpp  Mouse.cpp  ProgressBar.cpp  Slider.cpp  Text.cpp  TextBox.cpp  TitleBar.cpp  Window.cpp
src/lpg/resmgr/: DefaultLoaders.cpp  ResourceManager.cpp  SVGLoader.cpp
src/lpg/util/: Log.cpp  ResourceManager.cpp  StrManip.cpp  VectorImage.cpp
